donate plan section added

--- a/index.html
+++ b/index.html
@@ -55,6 +55,32 @@
             </div>
             </div>
         </section>
+        <!-- donate plan section  -->
+         <section>
+            <div class="donate-plan-content">
+                <h3 class="content-title">Our Donate Plan</h3>
+                <p class="description text-gray">Your support can change lives. Let’s come together to help those who
+                    are struggling. Every donation,
+                    big or small, brings hope and relief to those in need.</p>
+            </div>
+            <div class="donate-card-container display-flex">
+                <div class="donate-card bg-color-1">
+                    <img src="./icons/food.png" alt="">
+                    <h5 class="donate-title">Food for a family</h5>
+                    <p class="description text-gray">Providing food for a family in need can bring hope and relief during difficult times. Your donation helps ensure that no child or parent goes to bed hungry.</p>
+                </div>
+                <div class="donate-card bg-color-2">
+                    <img src="./icons/shelter.png" alt="">
+                    <h5 class="donate-title">Shelter for a family</h5>
+                    <p class="description text-gray">Your donation can give a safe shelter to a homeless family, offering warmth, protection, and hope for a better tomorrow.</p>
+                </div>
+                <div class="donate-card bg-color-3">
+                    <img src="./icons/Frame-1.png" alt="">
+                    <h5 class="donate-title">Education for a child</h5>
+                    <p class="description text-gray">Your support can give a child access to education, opening doors to a brighter future filled with knowledge, opportunity, and hope.</p>
+                </div>
+            </div>
+         </section>
     </main>
 </body>
 
