depend and survive section added

--- a/index.html
+++ b/index.html
@@ -81,6 +81,35 @@
                 </div>
             </div>
          </section>
+         <!-- depend and survive section  -->
+          <section>
+            <!-- depend  -->
+            <div class="depend-container display-flex">
+                <div>
+                    <h3 class="content-title">Their lives depend on your donation</h3>
+                    <p class="description text-gray">Your support can change lives. Let’s come together to help those who
+                    are struggling. Every donation,
+                    big or small, brings hope and relief to those in need.</p>
+                    <button class="btn-primary">How to Contribute?</button>
+                </div>
+                <div>
+                    <img src="./images/donation0.jpg" alt="">
+                </div>
+            </div>
+            <!-- survive  -->
+             <div class="depend-container display-flex column-reverse">
+                <div>
+                    <img src="./images/donation12.png" alt="">
+                </div>
+                <div>
+                    <h3 class="content-title">They need us to survive</h3>
+                    <p class="description text-gray">Your support can change lives. Let’s come together to help those who
+                    are struggling. Every donation,
+                    big or small, brings hope and relief to those in need.</p>
+                    <button class="btn-primary">How to Contribute?</button>
+                </div>
+            </div>
+          </section>
     </main>
 </body>
 
