footer section added

--- a/index.html
+++ b/index.html
@@ -45,18 +45,18 @@
                 <div class="amount-list display-flex">
                     <h4>5000tk</h4>
                 </div>
-                
+
             </div>
             <div class="display-flex amount-select">
                 <div>
-                <p class="text-gray description">Other Amount (Taka)</p>
-                <hr>
-                <button class="btn-primary">Donate Now</button>
-            </div>
+                    <p class="text-gray description">Other Amount (Taka)</p>
+                    <hr>
+                    <button class="btn-primary">Donate Now</button>
+                </div>
             </div>
         </section>
         <!-- donate plan section  -->
-         <section>
+        <section>
             <div class="donate-plan-content">
                 <h3 class="content-title">Our Donate Plan</h3>
                 <p class="description text-gray">Your support can change lives. Let’s come together to help those who
@@ -67,29 +67,34 @@
                 <div class="donate-card bg-color-1">
                     <img src="./icons/food.png" alt="">
                     <h5 class="donate-title">Food for a family</h5>
-                    <p class="description text-gray">Providing food for a family in need can bring hope and relief during difficult times. Your donation helps ensure that no child or parent goes to bed hungry.</p>
+                    <p class="description text-gray">Providing food for a family in need can bring hope and relief
+                        during difficult times. Your donation helps ensure that no child or parent goes to bed hungry.
+                    </p>
                 </div>
                 <div class="donate-card bg-color-2">
                     <img src="./icons/shelter.png" alt="">
                     <h5 class="donate-title">Shelter for a family</h5>
-                    <p class="description text-gray">Your donation can give a safe shelter to a homeless family, offering warmth, protection, and hope for a better tomorrow.</p>
+                    <p class="description text-gray">Your donation can give a safe shelter to a homeless family,
+                        offering warmth, protection, and hope for a better tomorrow.</p>
                 </div>
                 <div class="donate-card bg-color-3">
                     <img src="./icons/Frame-1.png" alt="">
                     <h5 class="donate-title">Education for a child</h5>
-                    <p class="description text-gray">Your support can give a child access to education, opening doors to a brighter future filled with knowledge, opportunity, and hope.</p>
+                    <p class="description text-gray">Your support can give a child access to education, opening doors to
+                        a brighter future filled with knowledge, opportunity, and hope.</p>
                 </div>
             </div>
-         </section>
-         <!-- depend and survive section  -->
-          <section>
+        </section>
+        <!-- depend and survive section  -->
+        <section>
             <!-- depend  -->
             <div class="depend-container display-flex">
                 <div>
                     <h3 class="content-title">Their lives depend on your donation</h3>
-                    <p class="description text-gray">Your support can change lives. Let’s come together to help those who
-                    are struggling. Every donation,
-                    big or small, brings hope and relief to those in need.</p>
+                    <p class="description text-gray">Your support can change lives. Let’s come together to help those
+                        who
+                        are struggling. Every donation,
+                        big or small, brings hope and relief to those in need.</p>
                     <button class="btn-primary">How to Contribute?</button>
                 </div>
                 <div>
@@ -97,20 +102,38 @@
                 </div>
             </div>
             <!-- survive  -->
-             <div class="depend-container display-flex column-reverse">
+            <div class="depend-container display-flex column-reverse">
                 <div>
                     <img src="./images/donation12.png" alt="">
                 </div>
                 <div>
                     <h3 class="content-title">They need us to survive</h3>
-                    <p class="description text-gray">Your support can change lives. Let’s come together to help those who
-                    are struggling. Every donation,
-                    big or small, brings hope and relief to those in need.</p>
+                    <p class="description text-gray">Your support can change lives. Let’s come together to help those
+                        who
+                        are struggling. Every donation,
+                        big or small, brings hope and relief to those in need.</p>
                     <button class="btn-primary">How to Contribute?</button>
                 </div>
             </div>
-          </section>
+        </section>
+        <!-- update section  -->
+        <section>
+            <div class="update-container">
+                <h3 class="content-title">Get My Updates</h3>
+                <p class="description text-gray">Your support can change lives. Let’s come together to help those who
+                    are struggling. Every donation,
+                    big or small, brings hope and relief to those in need.</p>
+            </div>
+        </section>
     </main>
+    <footer>
+        <section >
+            <div class="footer-container">
+            <input type="email" name="" id="" placeholder="example@gmail.com">
+            <button class="">Subscribe</button>
+        </div>
+        </section>
+    </footer>
 </body>
 
 </html>
