--- a/index.html
+++ b/index.html
@@ -66,20 +66,20 @@
             <div class="donate-card-container display-flex">
                 <div class="donate-card bg-color-1">
                     <img src="./icons/food.png" alt="">
-                    <h5 class="donate-title">Food for a family</h5>
+                    <h5 class="donate-title-2">Food for a family</h5>
                     <p class="description text-gray">Providing food for a family in need can bring hope and relief
                         during difficult times. Your donation helps ensure that no child or parent goes to bed hungry.
                     </p>
                 </div>
                 <div class="donate-card bg-color-2">
                     <img src="./icons/shelter.png" alt="">
-                    <h5 class="donate-title">Shelter for a family</h5>
+                    <h5 class="donate-title-2">Shelter for a family</h5>
                     <p class="description text-gray">Your donation can give a safe shelter to a homeless family,
                         offering warmth, protection, and hope for a better tomorrow.</p>
                 </div>
                 <div class="donate-card bg-color-3">
                     <img src="./icons/Frame-1.png" alt="">
-                    <h5 class="donate-title">Education for a child</h5>
+                    <h5 class="donate-title-2">Education for a child</h5>
                     <p class="description text-gray">Your support can give a child access to education, opening doors to
                         a brighter future filled with knowledge, opportunity, and hope.</p>
                 </div>
